<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_permission_dialog_bg">

    <TextView
        android:id="@+id/tv_tip_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/ui_dialog_permission_title"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_tip_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/ui_dialog_permission_content"
        android:textColor="#666666"
        android:textSize="15.5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_title"
        tools:ignore="SpUsage" />

    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="30dp"
        android:background="#ffe6e7eb"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_content" />

    <TextView
        android:id="@+id/tv_tip_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/ui_dialog_permission_positive"
        android:textColor="#333333"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/divide"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>