<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:ignore="ContentDescription,SpUsage">

    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- 视频呼叫页面顶部用户信息 start -->
    <FrameLayout
        android:id="@+id/flUserAvatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivUserInnerAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/t_avchat_avatar_default" />

        <TextView
            android:id="@+id/tvUserInnerAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="25dp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@id/flUserAvatar"
        app:layout_constraintEnd_toEndOf="@id/flUserAvatar"
        app:layout_constraintTop_toBottomOf="@id/flUserAvatar" />

    <TextView
        android:id="@+id/tvOtherCallTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ui_tip_waiting_to_accept_for_audio"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/tvUserName"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintEnd_toEndOf="@id/tvUserName" />
    <!-- 视频呼叫页面顶部用户信息 end -->

    <!-- 主叫用户呼叫操作控制 start-->
    <ImageView
        android:id="@+id/ivCancel"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="75dp"
        android:src="@drawable/call_reject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCancelTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/ui_cancel"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/ivCancel"
        app:layout_constraintStart_toStartOf="@id/ivCancel"
        app:layout_constraintTop_toBottomOf="@id/ivCancel" />

    <ImageView
        android:id="@+id/ivCallSwitchType"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="75dp"
        android:src="@drawable/icon_call_tip_audio_to_video"
        app:layout_constraintBottom_toTopOf="@id/ivCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCallSwitchTypeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/ui_switch_to_video"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/ivCallSwitchType"
        app:layout_constraintStart_toStartOf="@id/ivCallSwitchType"
        app:layout_constraintTop_toBottomOf="@id/ivCallSwitchType" />

    <ImageView
        android:id="@+id/ivCallMuteAudio"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="75dp"
        android:src="@drawable/icon_call_audio_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCallMuteAudioTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/ui_microphone"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/ivCallMuteAudio"
        app:layout_constraintStart_toStartOf="@id/ivCallMuteAudio"
        app:layout_constraintTop_toBottomOf="@id/ivCallMuteAudio" />

    <ImageView
        android:id="@+id/ivCallSpeaker"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="75dp"
        android:src="@drawable/icon_call_audio_speaker_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCancel" />

    <TextView
        android:id="@+id/tvCallSpeakerTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/ui_speaker"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/ivCallSpeaker"
        app:layout_constraintStart_toStartOf="@id/ivCallSpeaker"
        app:layout_constraintTop_toBottomOf="@id/ivCallSpeaker" />
    <!-- 主叫用户呼叫操作控制 end-->

    <TextView
        android:id="@+id/tvSwitchTip"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#40000000"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/ui_switch_call_type_request_tip"
        android:textSize="14dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSwitchTipClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:alpha="0.4"
        android:gravity="center"
        android:padding="12dp"
        android:src="@drawable/icon_switch_call_type_close"
        app:layout_constraintBottom_toBottomOf="@+id/tvSwitchTip"
        app:layout_constraintEnd_toEndOf="@id/tvSwitchTip"
        app:layout_constraintTop_toTopOf="@id/tvSwitchTip" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/switchTypeTipGroup"
        android:visibility="gone"
        android:layout_width="wrap_content"
        app:constraint_referenced_ids="tvSwitchTip,ivSwitchTipClose"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivFloatingWindow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:src="@drawable/icon_call_floating_window"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>